src/App.css
/* ... */
.sections{
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 70%;
    justify-self: center;
}

.header{
    color: var(--accent-color);
    text-align: left;
    margin: 0 0;
    padding: 0px;
    text-wrap: wrap;
    font-size: var(--heading-size);
}


#progressStats { 
    display: flex;
    flex-direction: row;
    flex-wrap:wrap;   
    text-align: center;
    gap: 20px;
    color: var(--dark-text-color);
    border-radius: 15px;
    justify-content: center;
    align-items: center;
    
}

.statBox{
    display: flex;

    justify-content: center;
    min-width: 100px;
    width: 25%;
    height: 70px;
    align-items: center;
    border-radius: 5px;
    margin: 0px;
    padding: 20px;
    min-height: 2rem;

    font-size: var(--paragraph-size);
    font-weight: 700;
    background-color: var(--accent-color);
    color: var(--primary-color);

    transition: 200ms ease;
}
.statBox:hover{
    box-shadow: 5px 5px 20px 5px var(--primary-color) ;
}
#barProgress{
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 50px;
    gap: 25px;

}
button {
    box-sizing: border-box;
    position:inherit;
    display: flex;
    align-items: center;
    gap: 15px;
    background-color: var(--accent-color-color);
    justify-content: center;
    border-radius: 10px;
    margin-left: auto;
    margin-right: auto;
    font-size: var(--label-size);
    width: 100%;
    height: 40px;
    color: var(--text-color);
    border-width: 0px;
    z-index: 1;
    transition: 200ms ease;
}

button:hover{
    cursor: pointer;
    background-color: var(--accent-color);
    scale: 105%;

}
button:active{
    cursor: pointer;
    scale: 95%;
}

#dropdownBox{

    flex: 0 0 30%;
    padding: 0px;
    position: relative;
    width: 100px;

}
#options {
    display: grid;
    grid-template-columns: 1fr;
    list-style-type: none;
    gap: 10px;
    padding: 5px;
    padding-left: 5px;
    text-align: left;
    box-sizing: border-box;
    position: absolute;
    border-radius: 15px;
    background-color: var(--accent-color);
    color: var(--dark-text-color);

    top: 70%;
    right: 0%;
    left: 0px;
    width: inherit;
    font-size: var(--paragraph-size);
    
}

#listItems {
    box-sizing: border-box;
    padding: 10px;
    border-radius: inherit;
    cursor: pointer;
    transition: background-color 200ms;
    
}
#listItems:hover{
    cursor: pointer;
    background-color: var(--accent-color-color);
}
#containerStyles {
    flex-grow: 1;
    flex: 1;
    height: 30px;
    box-sizing: border-box;
    border-radius: 15px;
    background-color: var(--accent-color);
    margin: 0px;

}

#fillerStyles {
    height: 100%;
    border-radius: inherit;
    background-color: var(--accent-color-color);
}

.content {

    display: flex;
    flex-direction: column;
    gap: 15px;
    border-style: solid;
    border-color: var(--accent-color);
    border-width: 0px;
    box-sizing: border-box;
    text-align: left;
    color: var(--text-color);
    background-color: var(--secondary-color);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    padding: 15px;
    border-radius: 15px;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    box-shadow: 10px 10px 10px 5px var(--dark-text-color);
}
#projects{
    gap: 60px;
}
.projectfolder {
    background-color: var(--primary-color);
    display: flex;
    flex-direction: column;
    padding: inherit;
    border-radius: inherit;
    justify-content: center;
    gap: 10px;
    anchor-name: --myAnchor;
    z-index: 2;
}
.projectTitle{
    text-align: center;
    padding: 10px;
    background-color: var(--secondary-color);
    border-radius: 5px;
    
}
.projectTitle a{
    font-size: var(--subheading-size);
    text-decoration-line: none;
    color: var(--text-color);
}
.projectfolder strong{
    font-size: var(--label-size);
}
.folderbody{
    display: flex;
    gap: 15px;
    flex-wrap: wrap;
    align-items: stretch;


}
.folderbody .bodytext{
    flex-grow: 2;
}
.folderbody img {
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
    flex-grow: 1;
    flex-shrink: 1; 
    max-width: 100%;
    object-fit:cover;
    display: block;
    border-width: 5px;
    border-style: solid;
    border-color: var(--secondary-color);
    border-radius: 10px;
}
.bodytext{
    border-radius: 10px;
    background-color: var(--secondary-color);
    padding: 10px;
    min-width: 200px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 20px;
    flex: 1;
}
.tab{
    border-top-left-radius: 15px;
    background-color:#322642;
    border-top-right-radius: 15px;
    display: flex;
    height: inherit;
    z-index: 3;
    justify-content: center;    
    align-items: center;
    margin-left: -10px;
    transition: height 100ms ease;
    flex-grow: 1;
    width: 50%;
    
}
.tab h5{
    width: 100%;
    white-space: nowrap; /* Prevent the text from wrapping to the next line */
    overflow: hidden; /* Hide the text that goes beyond the container's width */
    text-overflow: ellipsis;
    box-sizing: border-box;
    padding: 20px;
}
.tab:hover{
    cursor: pointer;
    height: 125%;
}
.activeTab{
    background-color: var(--primary-color);
    z-index: 4
}
.inActiveTab{
    background-color: var(--dark-text-color);
    z-index: 3;
}
.tabs{
    z-index: 2;
    width: 50%;
    height: 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: absolute;
    gap: -5px;
    position-anchor: --myAnchor;
    align-items:center;
    bottom: anchor(top); 
    left: calc(anchor(left) + 30px);

}
.list{
    display: flex;
    flex-direction: column;
    gap: 10px;
}
#GalleryPhotos{
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    gap: 10px;
    width: 100%;
    padding: 20px 0;
    white-space: nowrap;
    animation: none;
    scrollbar-width: none;
    flex-shrink: 0;
    align-items: center;    
}
/* ... */

